# aphrodite-rust

./: Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
aphrodite-api/: Cargo.toml
aphrodite-api/src/: config.rs  error.rs  lib.rs  main.rs  validation.rs
aphrodite-api/src/middleware/: mod.rs  rate_limit.rs
aphrodite-api/src/routes/: health.rs  mod.rs  render.rs
aphrodite-api/src/schemas/: mod.rs  request.rs  response.rs
aphrodite-api/src/services/: chart.rs  mod.rs  pool.rs
aphrodite-api/tests/: integration.rs
aphrodite-api/tests/integration/: mod.rs  render_tests.rs
aphrodite-api/wheels/: default.json
aphrodite-core/: Cargo.toml
aphrodite-core/src/: lib.rs
aphrodite-core/src/aspects/: calculator.rs
aphrodite-core/src/ephemeris/: adapter.rs
aphrodite-core/src/layout/: assembler.rs  loader.rs  rings.rs
aphrodite-core/src/rendering/: generator.rs
aphrodite-core/src/vedic/: dashas.rs  types.rs  yogas.rs
aphrodite-core/src/western/: decans.rs
aphrodite-core/tests/: layout_tests.rs  rendering_tests.rs
aphrodite-slint/: Cargo.toml
aphrodite-slint/src/: lib.rs  renderer.rs  shapes.rs
aphrodite-wasm/: Cargo.toml
aphrodite-wasm/examples/web/: index.html  package.json
aphrodite-wasm/src/: canvas.rs  lib.rs  renderer.rs
docs/: API.md  PERFORMANCE.md  RENDERING.md  TESTING.md
