[package]
name = "aphrodite-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aphrodite-api"
path = "src/main.rs"

[dependencies]
aphrodite-core = { path = "../aphrodite-core" }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["make"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
governor = "0.6"
tower_governor = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.4", features = ["util"] }
axum-test = "16.0"

