[package]
name = "aphrodite-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
swisseph = "0.3"  # Swiss Ephemeris Rust bindings
regex = "1"  # For wheel definition validation
uuid = { version = "1", features = ["v4"] }  # For generating IDs

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1", features = ["test-util"] }

[[bench]]
name = "ephemeris_bench"
harness = false

[[bench]]
name = "aspect_bench"
harness = false

